re PR c++/17154 (Using declaration of function name ignored inside partial specialization of template class)

PR c++/17154
	* search.c (lookup_field_1): Handle using declaration in
	class template partial specialization.

	* g++.dg/template/using9.C: New test.

From-SVN: r92994